fixed overlapping issues

--- a/projects/style.css
+++ b/projects/style.css
@@ -44,9 +44,18 @@ h1 {
 
 .project img {
 	width: 25%;
+	height: auto;
+	aspect-ratio: 4 / 5;
 	float: left;
 	margin: 1vw;
 	margin-top: 0;
 	margin-left: 0;
 	border: 2.5px solid #00006b;
+	object-fit: cover;
+}
+
+.project::after {
+	content: "";
+	display: table;
+	clear: both;
 }
